# axum-sqlx-todo

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml  scheduled-audit.yml
backend/: .env  Cargo.toml
backend/migrations/: 20230408192958_todos.sql
backend/src/: endpoints.rs  error.rs  main.rs  todo.rs
backend/src/endpoints/: swagger_ui.rs  todo.rs
frontend/: Cargo.toml
src/: endpoints.rs  lib.rs  main.rs  state.rs  todo.rs
src/endpoints/: health_check.rs  swagger_ui.rs  todo.rs
tests/: health_check.rs
