[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
hyper = "0.14.25"
# sqlx = "0.6.3"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
utoipa = "3.2.1"
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
