[package]
name = "backend"
version = "0.1.0"
authors = ["Pascal Post <pascal.post@mailbox.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.9"
dotenvy = "0.15.7"
hyper = "0.14.25"
serde = "1.0.159" 
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
utoipa = "3.2.1"
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
pretty_env_logger = "0.4.0"
